aws prompts
Added codewhisper prompts